# setting-up-sfml-with-find-package

./: .gitignore  CMakeLists.txt  README.md  build-exe.bat  build-win.bat  config-exe.bat  config-win.bat
src/: main.cpp
